# ricochet

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.txt  array.5c  autogen.sh  boards.5c  client-board.5c  client-draw.5c  client-games.5c  client-host.5c  client-link.5c  client-main.5c  client-messages.5c  client-net.5c  client-parse.5c  client-svg.5c  client-update.5c  client-userlist.5c  client-util.5c  client-window.5c  client.5c  client_svg.5c  clients.5c  configure.ac  connect.5c  dispatch.5c  edit-test.5c  games.5c  lex.5c  list.5c  main.5c  make-icon.5c  net.5c  nichrome-border.5c  nichrome-box.5c  nichrome-edit.5c  nichrome-message.5c  nichrome-rrboard.5c  (+32 more)
debian/: changelog  control  copyright  ricochet.menu  rules
svg/: bin2cstring.5c
